--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 .bg-color{
 	background: orangered;
+	padding-top: 0.133333rem;
 }
 .mui-bar-tab .mui-tab-item.mui-active{
 	color: orangered;
 }
 .bg-color-bg{
 	background: rgba(233,233,233,0.3);
+	padding-top: 0.133333rem;
 }
