--- a/css/sy.css
+++ b/css/sy.css
@@ -41,31 +41,24 @@
 	font-size: 0.293333rem;
 	color: #999999;
 }
-.ystt_box{
-	/*幼师头条*/
-	background: #fff;
-}
 .rmfy_box{
 	/*热门房源*/
 	background: #ffffff;
 	padding-bottom: 0.533333rem;
 }
-.zxsj{
-	/*最新数据*/
-	background: #fff;
-}
 .tit{
 	position: relative;
 	width: 100%;
-	height: 1.133333rem;
-	line-height: 1.133333rem;
+	height: 1.533333rem;
+	line-height: 1.533333rem;
 	font-size: 0.453333rem;
-	padding-left: 0.533333rem;
+	padding-left: 0.666666rem;
 }
 .tit::before{
 	position: absolute;
 	top: 50%;
-	left: 0.266666rem;
+	/*left: 0.266666rem;*/
+	left: 0.4rem;
 	margin-top: -0.186666rem;
 	content: "";
 	display: block;
@@ -99,29 +92,20 @@
 	overflow-x: auto;
 	white-space: nowrap;
 	padding-bottom: 0.133333rem;
-	padding: 0 0.266666rem;
+	padding: 0 0.4rem;
 }
 .grab .img{
 	width: 100%;
-	height: 2.0rem;
 	overflow: hidden;
 }
 .grab .img img{
 	width: 100%;
 }
-.grab .title{
-	font-size: 0.333333rem;
-	color: #666666;
-	overflow: hidden;
-    /*text-overflow: ellipsis;*/
-    white-space: nowrap;
-}
 .grab li{
-	width: 3.066666rem;
-	margin: 0 0.133333rem;
-	height: 3.6rem;
-	border: 1px solid red;
+	width: 4.533333rem;
+	height: 2.466666rem;
 	display: inline-block;
+	margin-left: 0.066666rem;
 }
 .grab li a{
 	height: 100%;
@@ -188,24 +172,140 @@
 	color: #000;
 }
 .tab_main{
+	position: relative;
+	z-index: 1;
 	height: 1.333333rem;
-	background: #f8f8f8;
+	background: #fff;
 }
 .tab_nav{
 	height: 0.133333rem;
 }
 .tab_nav span{
-	width: 2.826666rem;
+	width: 2.7rem;
 	display: inline-block;
 	line-height: 1.333333rem;
 	font-size: 0.373333rem;
-	color: #000;
-	border: 1px solid red;
+	color: #666666;
+	/*border: 1px solid red;*/
 	text-align: center;
+	box-sizing: border-box;
 }
 .box_q{
 	display: none;
+	background: #fff;
 }
 .sp_ac{
+	background: url(../img/tab_bg1.png) no-repeat left center;
+	background-size: 100% auto;
+	color: #000!important;
+}
+.sp_ac1{
+	background: url(../img/tab_bg.png) no-repeat left center;
+	background-size: 100% auto;
+	color: #000!important;
+}
+.yzwt_pic{
+	position: relative;
+	width: 10rem;
+	height: 3.36rem;
+}
+.yzwt_pic img{
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+}
+.yzwt_tip{
+	font-size: 0.346666rem;
+	color: #999;
+	text-align: center;
+	line-height: 1.133333rem;
+}
+.mui-input-group:after,.mui-input-group:before{
+	background: none;
+}
+.mui-input-group input, .mui-input-group textarea{
+	font-size: 0.373333rem;
+}
+.mui-input-group textarea{
+	color: #c8c8c8;
+}
+.btn_box{
+	position: relative;
+	text-align: right;
+}
+.btn_box .btn{
+	width: 1.76rem;
+	height: 0.666666rem;
+	border-radius: 0.666666rem;
+	margin: 0.666666rem 0.4rem 0.466666rem 0;
+}
+.box_q .hqyzm{
+	position: absolute;
+	right: 0.6rem;
+	margin-top: -0.75rem;
+	font-size: 0.373333rem;
+	color: #c8c8c8;
+}
+.tjfy{
+	height: 7.666666rem;
 	background: #fff;
+	margin-top: 0.266666rem;
+}
+.fy_list{
+	padding-left: 0.4rem;
+}
+.fy_list .zx{
+	height: 1px;
+	background: #e5e5e5;
+	margin-bottom: 0.533333rem;
+}
+.fy_list li{
+	display: flex;
+	height: 2.666666rem;
+}
+.fy_pic{
+	width: 5rem;
+	height: 2.96rem;
+}
+.fy_pic img{
+	width: 100%;
+}
+.fy_xx{
+	width: 100%;
+	margin-left: 0.6rem;
+}
+.fy_xx .lp{
+	font-size: 0.426666rem;
+	color: #333;
+}
+.fy_xx .mjwz{
+	font-size: 0.32rem;
+	color: #999;
+}
+.fy_xx .jzjf{
+	width: 1.4rem;
+	padding: 0.026666rem 0;
+	font-size: 0.32rem;
+	color: #2b70d8;
+	text-align: center;
+	background: #daeefd;
+	border-radius: 0.053333rem;
+}
+.fy_xx .dj{
+	font-size: 0.426666rem;
+	color: #f4513e;
+}
+.fy_xx .dj i{
+	font-style: normal;
+	font-size: 0.32rem;
+}
+.fy_xx .dj s{
+	margin-right: 0.4rem;
+	color: #c8c8c8;
+}
+.ystt_box{
+	/*幼师头条*/
+	background: #fff;
+	margin-top: 0.266666rem;
+	height: 4.266666rem;
 }
