--- a/css/jxfyList.css
+++ b/css/jxfyList.css
@@ -1,1 +1,4 @@
 .listUl{padding-top: 0.533333rem;}
+.jzjf{display: inline-block;}
+.jzdj{color: #fcae18;background-color: #fff5df;padding: 0.04rem 0.266666rem;border-radius: 0.066666rem;font-size: 0.32rem;}
+
