--- a/css/person.css
+++ b/css/person.css
@@ -6,6 +6,15 @@ body{
 	bottom: 0;
 	background: #f0f0f0;
 }
+.save{
+	position: absolute;
+    right: 0;
+    height: 44px;
+    line-height: 44px;
+	font-size: 0.453333rem;
+	color: #666666;
+	padding-right: 0.4rem;
+}
 .wd-header{
 	height: 1.733333rem;
 	background: #f9f9f9;
