--- a/css/fyxq.css
+++ b/css/fyxq.css
@@ -1,2 +1,40 @@
-.fytail{border: 1px solid red;height: 1.72rem;padding-top: 0.853333rem;background-color: #f9f9f9;padding-left: 0px;padding-right: 0px;}
-.titlezi{border: 1px solid red;font-size: 0.453333rem;color: #666666;}
+.fytail{height: 1.72rem;padding-top: 0.853333rem;background-color: #f9f9f9;padding-left: 0px;padding-right: 0px;}
+.titlezi{font-size: 0.453333rem;color: #666666;margin-left: 3.04rem;}
+.fyxqfh{padding: 0 0 !important;color: #676767;margin-left: 0.333333rem !important;width:0.28rem;line-height:0.48rem;margin-right: 0 !important;}
+.fyzhuti{position: absolute;top: 1.706666rem;bottom:0;left:0;right:0;padding-top: 0px !important;overflow: auto;}
+.fyxqyi{border: 1px solid red;}
+#slider{
+	height: 5.813333rem;
+}
+.imglunbo{color: #ffffff;font-size: 0.293333rem;text-align: right;padding-right: 0.626666rem !important;}
+.fuxqxx{border-bottom: 1px solid #dbdbdb;height: 9.906666rem;}
+.fyxqxxyiu{height: 1.666666rem;}
+.fyxqxxyiu p{border-bottom: 1px solid #e5e5e5;height: 100%;margin-left: 0.506666rem;color: #282828;line-height: 1.666666rem;font-size:0.453333rem;width: 8.92rem;}
+.fyxqxxer{height: 1.533333rem;}
+.fyxqxxer ul{border-bottom: 1px solid #e5e5e5;height: 100%;margin-left: 0.506666rem;width: 8.92rem;display: flex;align-items: center;}
+.fyxqxxer ul li{width: 33.33%;position: relative;padding-left: 0.36rem;}
+.fyxqxxer ul li:after{content: "";display: block;width: 1px;height: 0.906666rem;background-color: #e5e5e5;position: absolute;top: 50%;right: 0px;margin-top: -0.453333rem;}
+.fyxqxxer ul li:first-child{padding-left: 0;}
+.danjia{font-size: 0.346666rem;color: #919191;}
+.danyuan{font-size: 0.4rem;margin-top: 0.12rem;color: #f4513e;}
+.fyxqxxsan{margin-top: 0.386666rem;padding-left: 0.506666rem;}
+.zhognxiu{height: 0.373333rem;display: flex;text-align: center;align-items: center;}
+.zhognxiuyi{width: 1.186666rem;display: flex;height: 100%;}
+.zhognxiuyi i{font-style: normal;width: 1.053333rem;border: 1px solid #daeefd;background-color: #daeefd;border-radius: 5px;line-height: 100%;height: 100%;text-align: center;font-size: 0.266666rem;color: #20a0ff;}
+.kezhuce{width: 1.053333rem;border: 1px solid #daeefd;background-color: #daeefd;border-radius: 5px;line-height: 100%;height: 100%;text-align: center;font-size: 0.266666rem;color: #3db894;}
+.fyxqxxsan ul{margin-top: 0.4rem;}
+.stkrgw{width: 50%;}
+.fyxqxxsan ul li{display: flex;height:0.853333rem;}
+.fyxqxxsan ul li p span{font-size: 0.373333rem;}
+.kognwrgwei{color: #919191;}
+.kognwrgwei i{font-style: normal;}
+.neirong{color: #282828;}
+.wuyfsdceng{height: 0.293333rem;background-color: #dfdfdf;}
+.xshogwen{height: 2.213333rem;border-top: 1px solid #dfdfdf;border-bottom: 1px solid #dfdfdf;padding-left:  0.506666rem;}
+.xshgwedi{margin-top: 0.466666rem;display: flex;}
+.xshgwedier{display: flex;width:1.893333rem;}
+.xshgwedi span,.lianxfangs span{font-size: 0.373333rem;}
+.lianxfangs{display: flex;margin-top: 0.386666rem;}
+.lainsier{color: #2b70d8;}
+.shouc{height: 1.426666rem;border-top: 1px solid #dfdfdf;}
+.shouc p{border: 1px solid red;width: 50%;height: 100%;line-height: 100%;}
