--- a/css/login.css
+++ b/css/login.css
@@ -132,3 +132,9 @@
 	background: url(../img/ycmm.png) no-repeat center;
 	background-size: 100% auto;
 }
+.ycmm1{
+	width: 0.48rem;
+	height: 0.213333rem;
+	background: url(../img/xsmm_ion.png) no-repeat center;
+	background-size: 100% auto;
+}
