--- a/css/mycollection.css
+++ b/css/mycollection.css
@@ -100,6 +100,16 @@ body{
 	z-index: 99;
 	padding-right: 0.4rem;
 }
+.dibu:before{
+	content: "";
+	display: block;
+	width: 100%;
+	height: 1px;
+	background: #e5e5e5;
+	position: absolute;
+	top: -1px;
+	left: 0;
+}
 .del{
 	display: flex;
 	align-items: center;
