--- a/css/jxfyList.css
+++ b/css/jxfyList.css
@@ -1,7 +1,7 @@
 .listUl{padding-top: 0.533333rem;}
 .jzjf{display: inline-block;}
 .jzdj{color: #fcae18;background-color: #fff5df;padding: 0.04rem 0.266666rem;border-radius: 0.066666rem;font-size: 0.32rem;}
-.selc{position: relative;top: 50%;margin-top: -0.4rem;width: 0.48rem;height: 0.48rem;margin-right: 0.4rem;}
+.selc{position: relative;top: 50%;margin-top: -0.4rem;width: 0.48rem;height: 0.48rem;margin-right: 0.4rem;display: none;}
 .selc input[name='checkbox1']{width: 100%;height: 100%;}
 .selc_ch{width: 30px;height: 30px;position: absolute;top: -0.25rem;right: -0.16rem;}
 .mui-checkbox input[type=checkbox], .mui-radio input[type=radio]{right: 0px;}
