--- a/css/fast_zc.css
+++ b/css/fast_zc.css
@@ -55,6 +55,7 @@ body{
 	height: 1px;
 	position: absolute;
 	bottom: 1px;
+	left: 0;
 	background: #dcdcdc;
 }
 .mui-input-row .mui-input-clear~.mui-icon-clear{
@@ -105,4 +106,22 @@ body{
 	font-size: 0.4rem;
 	color: #c8c8c8;
 }
-
+.wj_btn{
+	margin-top: 4.266666rem;
+}
+.tip_b{
+	overflow: initial;
+	margin-top: 0.133333rem;
+}
+.err_tip{
+	position: absolute;
+	left: 0;
+	bottom: -0.8rem;
+	width: 100%;
+	height: 0.8rem;
+	line-height: 0.8rem;
+	font-size: 0.346666rem;
+	color: #f36969;
+	z-index: 999;
+	text-align: left;
+}
