--- a/css/loupan_detail.css
+++ b/css/loupan_detail.css
@@ -101,6 +101,8 @@
 	margin-top: 0.266666rem;
 }
 .lp_nm{
+	height: 0.8rem;
+	line-height: 0.8rem;
 	text-align: center;
 	font-size: 0.346666rem;
 	color: #010101;
