--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,15 @@
 	background-size: 100% 120%;
 	padding: 0;
 }
+.public_h{
+	height: 1.733333rem;
+}
+.public_con{
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	top: 1.733333rem;
+	padding-top: 0px!important;
+	overflow: auto;
+}
