--- a/css/jxfy.css
+++ b/css/jxfy.css
@@ -13,3 +13,6 @@
 .jxfyzxtubiao{color: #b9b9b9;}
 .jiage{color: #2c6fd7 !important;}
 .muiJiage{color: #2c6fd7;}
+.mui-backdrop {position: fixed;top: 0;right: 0;bottom: 0;left: 0;z-index: 998;background-color: rgba(0,0,0,.3);
+　　}
+.zhezoc{border: 1px solid red;position: fixed;z-index: 9998;height: 100px;}
