--- a/css/login.css
+++ b/css/login.css
@@ -106,13 +106,13 @@
 	height: 1.2rem;
 	margin: 0.4rem auto 0;
 }
-.btn{
+.btn,.btn1{
 	border: none;
 	outline: none;
 	width: 8.8rem;
 	height: 1.2rem;
 	border-radius: 0.106666rem;
-	background: #2b70d8;
+	background: #d2d2d2;
 	font-size: 0.4rem;
 	color: #fefefe;
 }
