--- a/css/wd.css
+++ b/css/wd.css
@@ -57,6 +57,22 @@ body{
 	font-size: 0.346666rem;
 	color: #fff;
 }
+.user_news .wrz,.user_news .yrz{
+	display: inline-block;
+	width: 1.733333rem;
+	height: 0.506666rem;
+	line-height: 0.4rem;
+	border: 1px solid #91baf8;
+	border-radius: 0.4rem;
+	font-size: 0.293333rem;
+	color: #91baf8;
+	text-align: center;
+}
+.user_news .yrz{
+	background: #0d5cd3;	
+	border: none;
+	color: #fff;
+}
 .wd_list li{
 	position: relative;
 	display: flex;
