--- a/css/jxfyList.css
+++ b/css/jxfyList.css
@@ -5,3 +5,12 @@
 .selc input[name='checkbox1']{width: 100%;height: 100%;}
 .selc_ch{width: 30px;height: 30px;position: absolute;top: -0.25rem;right: -0.16rem;}
 .mui-checkbox input[type=checkbox], .mui-radio input[type=radio]{right: 0px;}
+.zhezhaoce{position: fixed;top: 0px;bottom: 0px;left: 0px;right: 0px;background-color: rgba(0,0,0,0.3);z-index:12;}
+.zzcner{background-color: #FFFFFF;height: 8.013333rem;display: flex;}
+.zzcqy li{width: 3.333333rem;height: 1.32rem;line-height: 1.32rem;padding-left: 0.533333rem;color: #666666;font-size: 0.346666rem;}
+.zzcqy{width: 3.333333rem;height: 100%;background-color: #e5e5e5;}
+.zzcdcq{width: 3.333333rem;height: 100%;border-right: 1px solid #e5e5e5;}
+.zzcdcq li{width: 3.333333rem;height: 1.32rem;line-height: 1.32rem;padding-left: 0.533333rem;color: #666666;font-size: 0.346666rem;}
+.zhezhaocdisplay{display: none;}
+.zhezhaocdisbalo{display: block;}
+.mui-scroll{overflow: hidden;}
