--- a/css/jxfyList.css
+++ b/css/jxfyList.css
@@ -14,3 +14,12 @@
 .zhezhaocdisplay{display: none;}
 .zhezhaocdisbalo{display: block;}
 .mui-scroll{overflow: hidden;}
+.zhezhaoceshx{border: 1px solid red;position: fixed;top: 0px;bottom: 0px;left: 0px;right: 0px;background-color: rgba(0,0,0,0.3);z-index:12;}
+.zhezhaocdisplayshx{display: none;}
+.zhezhaocdisbaloshx{display: block;}
+.zzcnershx{background-color: #FFFFFF;height: 9.706666rem;padding-left: 0.56rem;}
+.mjqyfm{height: 1.4rem;line-height: 1.4rem;font-size: 0.346666rem;color: #333333;}
+.xuanxing{border-bottom: 1px solid #e5e5e5;height: 3.04rem;}
+.xiaokuai{border: 1px solid #ededed;height: 0.6rem;line-height:0.6rem;width: 1.906666rem;text-align: center;border-radius: 5px;font-size: 0.24rem;color: #898989;margin-right: 0.36rem;margin-bottom: 0.36rem;background-color:#ededed;}
+.xuanxingshuzi{display: flex;}
+.pingangm{color: #c7c7c7;}
