--- a/css/person.css
+++ b/css/person.css
@@ -14,6 +14,7 @@ body{
 	font-size: 0.453333rem;
 	color: #666666;
 	padding-right: 0.4rem;
+	cursor: pointer;
 }
 .wd-header{
 	height: 1.733333rem;
