--- a/css/broker.css
+++ b/css/broker.css
@@ -38,7 +38,7 @@
 	min-height: 6.893333rem;
 	height: auto;
 	margin-top: 0.666666rem;
-	background: url(../img/hzqy.png) no-repeat center;
+	background: url(http://47.92.145.21:81/hzqy.png) no-repeat center;
 	background-size: 100% auto;
 }
 .his_news{
