--- a/css/addZhiFuWu.css
+++ b/css/addZhiFuWu.css
@@ -27,4 +27,33 @@
 .woyaochuce{width: 50%;display: flex;height: 100%;align-items: center;justify-content: center;font-size: 0.4rem;color: #fefefe;background-color: #ffba26;}
 .bodadianhua a{color: #fefefe;}
 .addcnegzhijiange{height: 0.306666rem;background-color: #f0f0f0;}
-.womende{}
+.womende{height: 1.813333rem;line-height: 1.813333rem;padding-left: 0.4rem;display: flex;}
+.wodeyoushiys{width: 0.066666rem;display: flex;height:100%;align-items: center;}
+.wodeyoushiys i{width: 100%;height: 0.426666rem;background-color: #51bbb4;}
+.wodewemziti{padding-left: 0.226666rem;font-size: 0.426666rem;color: #333333;}
+.wodewemziti i{font-style: normal;}
+.jiagesh{height: 11.826666rem;padding-left: 0.4rem;}
+.jaigeshuibag{height: 0.826666rem;display: flex;}
+.jaigeshuibagspan{height:100%;width:1.186666rem;background: url(../img/addzhifwu.png) no-repeat;background-size: auto 100%;display: flex;}
+.jaigeshuiziti{font-size: 0.426666rem;display: flex;align-items: center;color: #333333;}
+.suoyoujiajv{padding-left: 1.186666rem;font-size: 0.346666rem;color: #666666;}
+.jiagesh li{margin-bottom: 0.56rem;}
+.bging2{background: url(../img/addzhifwu2.png) no-repeat;background-size: auto 100%;}
+.bging3{background: url(../img/addzhifwu3.png) no-repeat;background-size: auto 100%;}
+.bging4{background: url(../img/addzhifwu4.png) no-repeat;background-size: auto 100%;}
+.zzfw{background-color: #f0f0f0;}
+.dianhuwexi{background-color: #f0f0f0;padding-top: 0.466666rem;padding-left: 1.306666rem;}
+.dianhuwexi li{display:flex;}
+.yvuyv{text-align:right;width: 2.44rem;display: inline-block;height: 0.573333rem;line-height: 0.573333rem;font-size: 0.373333rem;color:#51bbb4;}
+.shuziyi{display:flex;margin-left: 0.173333rem;height: 0.573333rem;width: 0.573333rem;background: url(../img/addfwuxiao1.png) no-repeat;background-size: 100% 100%;position: relative;}
+.shuziyi2{background: url(../img/addfwuxiao2.png) no-repeat;background-size: 100% 100%;}
+.shuziyi3{background: url(../img/addfwuxiao3.png) no-repeat;background-size: 100% 100%;}
+.shuziyi4{background: url(../img/addfwuxiao4.png) no-repeat;background-size: 100% 100%;}
+.shuziyi5{background: url(../img/addfwuxiao5.png) no-repeat;background-size: 100% 100%;}
+.shuziyi6{background: url(../img/addfwuxiao6.png) no-repeat;background-size: 100% 100%;}
+.bingliaoj{display:flex;margin-left: 0.666666rem;width: 3.4rem;padding-bottom:0.133333rem;background-color: #FFFFFF;border-radius: 0.066666rem;padding-top: 0.173333rem;padding-left: 0.146666rem;font-size: 0.346666rem;color: #1e1e1e;margin-bottom: 0.506666rem; box-shadow:0px 0px 2px #e9e9e9;}
+.xian{border-left: 1px solid #51bbb4;display: flex;height:0.813333rem;}
+.shanjiao{border-width: 0.106666rem;border-style: solid;border-color: #51bbb4 transparent transparent transparent;width:0.106666rem;height:0.106666rem;display: flex;}
+.xiajiasji{display: flex;flex-direction: column;justify-content: center;width: 0.106666rem;height: 1.32rem;align-items: center;position: absolute;left: 0.23rem;top: 0.4rem;}
+.fangfzhix{height:0.513333rem;}
+.fangfzhixspan{top: 0.2rem}
