--- a/css/jxfyList.css
+++ b/css/jxfyList.css
@@ -14,7 +14,7 @@
 .zhezhaocdisplay{display: none;}
 .zhezhaocdisbalo{display: block;}
 .mui-scroll{overflow: hidden;}
-.zhezhaoceshx{position: fixed;top: 0px;bottom: 0px;left: 0px;right: 0px;background-color: rgba(0,0,0,0.3);z-index:12;}
+.zhezhaoceshx{position: fixed;top: 0px;bottom: 0px;left: 0px;right: 0px;background-color: rgba(0,0,0,0.3);z-index:1;}
 .zhezhaocdisplayshx{display: none;}
 .zhezhaocdisbaloshx{display: block;}
 .zzcnershx{position:absolute;width:100%;background-color: #ffffff;height: 9.706666rem;padding-left: 0.56rem;}
@@ -31,3 +31,5 @@
 .czqddig{box-shadow:0px 0px 5px #333333;margin-left:-0.56rem;position: absolute;bottom: 0rem;background-color: #ffffff;height: 1.6rem;width: 100%;}
 .mianjilag{height: 8.106666rem;overflow: auto;}
 .chanqxz{height: 1.2rem;}
+.xiaokuaisss{color: #2a72d8;background-color: #d9effd;}
+#fyid{display: none;}
