--- a/css/loupan_detail.css
+++ b/css/loupan_detail.css
@@ -18,7 +18,9 @@
 	display: inline-block;
 	width: 0.6rem;
 	height: 0.626666rem;
-	border: 1px solid #000;
+	/*border: 1px solid #000;*/
+	background: url(../img/wz_ion.png) no-repeat center;
+	background-size: auto 80%;
 }
 .wz_text{
 	font-size: 0.346666rem;
