--- a/css/search.css
+++ b/css/search.css
@@ -14,3 +14,6 @@
 .lishisuosudiyi{line-height: 1.2rem;padding-left:0.613333rem;display: flex;justify-content: space-between;}
 .lishisuosudiyier{font-size: 0.4rem;color: #999999;}
 .lishisuosudiyisan{margin-right:0.533333rem;color: #999999;display: flex;justify-content: center;align-items: center;align-content: center;}
+.muhusousous{display: none;}
+.lslist{display: none;}
+.suosukongbaiye{display: block;}
