--- a/css/sy.css
+++ b/css/sy.css
@@ -323,10 +323,40 @@
 }
 .shouhou{
 	position: fixed;
-	width: 1.333333rem;
+	z-index: 99999;
+	width: 2.4rem;
 	height: 0.8rem;
-	border: 1px solid red;
-	top: 50%;
+	top: 80%;
 	margin-top: -0.4rem;
 	right: 0;
+	background: #fc7b1f;
+	display: flex;
+	align-items: center;
+	border-top-left-radius: 0.8rem;
+	border-bottom-left-radius: 0.8rem;
+	font-size: 0.346666rem;
+	color: #fff;
+}
+.sy_shion{
+	display: inline-block;
+	width: 0.466666rem;
+	height: 0.466666rem;
+	background: url(../img/sy_bxion.png)no-repeat center;
+	background-size: 100% auto;
+	margin: 0 0.16rem;
+}
+.sy_kfion p{
+	position: fixed;
+	z-index: 99999;
+	right: 0;
+	top: 68%;
+	width: 1.12rem;
+	height: 1.12rem;
+	background: url(../img/sy_kfion.png)no-repeat center;
+	background-size: 100% auto;
+}
+.sy_kfion p a{
+	display: inline-block;
+	width: 100%;
+	height: 100%;
 }
