--- a/css/search.css
+++ b/css/search.css
@@ -2,6 +2,7 @@
 .sousuodeerji{margin-left:0.626666rem !important;width:7.866666rem !important;}
 .qvxiao{margin-left: 0.226666rem !important;width: 0.72rem;height:26px;font-size:0.346666rem !important;color: #ffffff;margin-top: 4px;}
 .suosinput{height:22px !important;line-height:22px !important;width:6.6rem !important;border: none !important;color: #676767;padding: 0px !important;font-size:0.346666rem;}
+.sousuwenzi{position: absolute;top: 3px;left: 40px;}
 .mui-icon-clear{line-height: 6px;}
 .suouskongb{position: absolute;top:65px;width: 100%;text-align: center;margin-top: 2.706666rem;}
 .sskbg{background: url(../img/jxfy_kb.png) no-repeat center;background-size: auto 100%;height:2.08rem;}
