--- a/css/liJiShenQ.css
+++ b/css/liJiShenQ.css
@@ -44,6 +44,16 @@
 	left: 0;
 	background: #dcdcdc;
 }
+.inpTex:after{
+	content: "";
+	display: block;	
+	width: 8.866666rem;
+	height: 0px!important;
+	position: absolute;
+	bottom: 1px;
+	left: 0;
+	background: #dcdcdc;
+}
 .mui-input-row .mui-input-clear~.mui-icon-clear{
 	top: 0.533333rem!important;
 	right: -0.266666rem!important;
