--- a/css/saleFuWu.css
+++ b/css/saleFuWu.css
@@ -44,17 +44,27 @@
 	left: 0;
 	background: #dcdcdc;
 }
+.inpTex:after{
+	content: "";
+	display: block;	
+	width: 8.866666rem;
+	height: 0px;
+	position: absolute;
+	bottom: 1px;
+	left: 0;
+	background: #dcdcdc;
+}
 .mui-input-row .mui-input-clear~.mui-icon-clear{
 	top: 0.533333rem!important;
 	right: -0.266666rem!important;
 }
-.xingbei div{width: 2.4rem;}
+.xingbei div{width: 2.9rem;}
 .xianshang{font-size: 0.4rem;color: #c8c8c8;}
-.xingbei input{}
+.xingbei input{transform:scale(.8);}
 .xingbei{display: flex; align-items: center;position:relative;height: 1.666666rem;border-bottom: 1px solid #e5e5e5;}
 .mui-checkbox, .mui-radio{left:-1.133333rem;}
-.nvshi{top:0.533333rem !important;}
-.nan{top:0.16rem !important;}
+.nvshi{top:0.41rem !important;}
+.nan{top:0.10rem !important;}
 .fangwutop{height: 0.106666rem;background-color: #f0f0f0;}
 .fangwuxinix{border-top: 1px solid #e5e5e5;border-bottom: 1px solid #e5e5e5;}
 .fangwuxinix div:after{display: none;}
