--- a/css/jxfyList.css
+++ b/css/jxfyList.css
@@ -5,7 +5,7 @@
 .selc input[name='checkbox1']{width: 100%;height: 100%;}
 .selc_ch{width: 30px;height: 30px;position: absolute;top: -0.25rem;right: -0.16rem;}
 .mui-checkbox input[type=checkbox], .mui-radio input[type=radio]{right: 0px;}
-.zhezhaoce{position: fixed;top: 0px;bottom: 0px;left: 0px;right: 0px;background-color: rgba(0,0,0,0.3);z-index:12;}
+.zhezhaoce{position: fixed;top: 0px;bottom: 0px;left: 0px;right: 0px;background-color: rgba(0,0,0,0.3);filter: Alpha(Opacity=30);z-index:12;}
 .zzcner{background-color: #FFFFFF;height: 8.013333rem;display: flex;}
 .zzcqy li{width: 3.333333rem;height: 1.32rem;line-height: 1.32rem;padding-left: 0.533333rem;color: #666666;font-size: 0.346666rem;}
 .zzcqy{width: 3.333333rem;height: 100%;background-color: #e5e5e5;}
@@ -14,15 +14,17 @@
 .zhezhaocdisplay{display: none;}
 .zhezhaocdisbalo{display: block;}
 .mui-scroll{overflow: hidden;}
-.zhezhaoceshx{position: fixed;top: 0px;bottom: 0px;left: 0px;right: 0px;background-color: rgba(0,0,0,0.3);z-index:1;}
+.zhezhaoceshx{position: fixed;top: 0px;bottom: 0px;left: 0px;right: 0px;background-color: rgba(0,0,0,0.3);z-index:12;}
 .zhezhaocdisplayshx{display: none;}
 .zhezhaocdisbaloshx{display: block;}
 .zzcnershx{position:absolute;width:100%;background-color: #ffffff;height: 9.706666rem;padding-left: 0.56rem;}
 .mjqyfm{height: 1.4rem;line-height: 1.4rem;font-size: 0.346666rem;color: #333333;}
 .xuanxing{border-bottom: 1px solid #e5e5e5;height: 3.04rem;}
 .xiaokzujin{border: 1px solid #ededed;height: 0.6rem;line-height:0.6rem;width: 1.906666rem;text-align: center;border-radius: 5px;font-size: 0.24rem;color: #898989;margin-right: 0.36rem;margin-bottom: 0.36rem;background-color:#ededed;}
+.xiaokzujinyishang{border: 1px solid #ededed;height: 0.6rem;line-height:0.6rem;width: 1.906666rem;text-align: center;border-radius: 5px;font-size: 0.24rem;color: #898989;margin-right: 0.36rem;margin-bottom: 0.36rem;background-color:#ededed;}
 .xiaokchuaq{border: 1px solid #ededed;height: 0.6rem;line-height:0.6rem;width: 1.906666rem;text-align: center;border-radius: 5px;font-size: 0.24rem;color: #898989;margin-right: 0.36rem;margin-bottom: 0.36rem;background-color:#ededed;}
 .xiaokuai{border: 1px solid #ededed;height: 0.6rem;line-height:0.6rem;width: 1.906666rem;text-align: center;border-radius: 5px;font-size: 0.24rem;color: #898989;margin-right: 0.36rem;margin-bottom: 0.36rem;background-color:#ededed;}
+.xiaokuaiyishang{border: 1px solid #ededed;height: 0.6rem;line-height:0.6rem;width: 1.906666rem;text-align: center;border-radius: 5px;font-size: 0.24rem;color: #898989;margin-right: 0.36rem;margin-bottom: 0.36rem;background-color:#ededed;}
 .xuanxingshuzi{display: flex;}
 .pingangm{color: #c7c7c7;}
 .zjqy{height: 1.426666rem;line-height: 1.426666rem;}
@@ -35,3 +37,18 @@
 .chanqxz{height: 1.2rem;}
 .xiaokuaisss{color: #2a72d8;background-color: #d9effd;}
 #fyid{display: none;}
+.sy_kfion p{
+	position: fixed;
+	z-index: 99999;
+	right: 0;
+	top: 68%;
+	width: 1.12rem;
+	height: 1.12rem;
+	background: url(../img/sy_kfion.png)no-repeat center;
+	background-size: 100% auto;
+}
+.sy_kfion p a{
+	display: inline-block;
+	width: 100%;
+	height: 100%;
+}
