--- a/css/fyxq.css
+++ b/css/fyxq.css
@@ -38,12 +38,15 @@
 .lainsier{color: #2b70d8;}
 .shouc{height: 1.426666rem;border-top: 1px solid #dfdfdf;display: flex;position: relative;}
 .shouc p{width: 50%;height: 100%;line-height: 100%;text-align: center;display: flex;justify-content: center;align-items: center;}
+.shoucengdianji{background-color: #302f35;}
+.xmjx{background-color: #ff8c00;}
+.xmjx a{width: 100%;height: 100%;line-height: 100%;text-align: center;display: flex;justify-content: center;align-items: center;}
 .xindebg{width: 0.493333rem;display: flex;height: 0.56rem;}
 .xindebgimg{background:url(../img/fav2.png) no-repeat;background-size: 100% 100%;}
-.choucdewezi{height: 0.493333rem;margin-left: 0.266666rem;font-size: 0.373333rem;display: flex;align-items: center;}
+.choucdewezi{color:#FFFFFF;height: 0.493333rem;margin-left: 0.266666rem;font-size: 0.373333rem;display: flex;align-items: center;}
 .choucdeweziwidth{width: 1.973333rem;}
 .choucdeweziyiwidth{width: 1.2rem;}
 .shouc p{display: flex;}
-.lainxixingmql{font-size: 0.4rem;color: #2b70d8;text-align:left;width: 100%;text-indent:0.8rem;}
-.xmjxlx{background: url(../img/shoucdianhuobg.png) no-repeat center;background-size:85% 85%;width: 1.146666rem;height: 1.146666rem;-webkit-box-shadow:1px 0px 0.093333rem #333333;box-shadow:1px 0px 0.093333rem #333333;border-radius: 50%;position: absolute;top: -0.133333rem;right: 0.4rem;}
+.lainxixingmql{font-size: 0.4rem;color: #FFFFFF;text-align:left;width: 100%;text-indent:0.8rem;}
+.xmjxlx{background:#fff url(../img/shoucdianhuobg.png) no-repeat center;background-size:85% 85%;width: 1.146666rem;height: 1.146666rem;-webkit-box-shadow:1px 0px 0.093333rem #333333;box-shadow:1px 0px 0.093333rem #333333;border-radius: 50%;position: absolute;top: -0.133333rem;right: 0.4rem;}
 
