--- a/css/fyxq.css
+++ b/css/fyxq.css
@@ -2,7 +2,7 @@
 .titlezi{font-size: 0.453333rem;color: #666666;margin-left: 3.04rem;}
 .fyxqfh{padding: 0 0 !important;color: #676767;margin-left: 0.333333rem !important;width:0.28rem;line-height:0.48rem;margin-right: 0 !important;}
 .fyzhuti{position: absolute;top: 1.706666rem;bottom:0;left:0;right:0;padding-top: 0px !important;overflow: auto;}
-.fyxqyi{}
+.fyxqyi{position: absolute;top: 0px;bottom: 0px;left: 0px;right: 0px;}
 #slider{
 	height: 5.813333rem;
 }
@@ -36,13 +36,14 @@
 .xshgwedi span,.lianxfangs span{font-size: 0.373333rem;}
 .lianxfangs{display: flex;margin-top: 0.386666rem;}
 .lainsier{color: #2b70d8;}
-.shouc{height: 1.426666rem;border-top: 1px solid #dfdfdf;display: flex;position: relative;}
+.liageda{position: absolute;top: 0px;left: 0px;right: 0px;bottom: 1.426666rem;overflow: auto;}
+.shouc{height: 1.426666rem;border-top: 1px solid #dfdfdf;display: flex;position: absolute;bottom: 0px;left: 0px;right: 0px;}
 .shouc p{width: 50%;height: 100%;line-height: 100%;text-align: center;display: flex;justify-content: center;align-items: center;}
 .shoucengdianji{background-color: #302f35;}
 .xmjx{background-color: #ff8c00;}
 .xmjx a{width: 100%;height: 100%;line-height: 100%;text-align: center;display: flex;justify-content: center;align-items: center;}
-.xindebg{width: 0.493333rem;display: flex;height: 0.56rem;}
-.xindebgimg{background:url(../img/fav2.png) no-repeat;background-size: 100% 100%;}
+.xindebg{width: 0.6rem;display: flex;height: 0.56rem;}
+.xindebgimg{background:url(../img/fav2.png) no-repeat;background-size: auto 100%;}
 .choucdewezi{color:#FFFFFF;height: 0.493333rem;margin-left: 0.266666rem;font-size: 0.373333rem;display: flex;align-items: center;}
 .choucdeweziwidth{width: 1.973333rem;}
 .choucdeweziyiwidth{width: 1.2rem;}
