2018-03-27 16:30pm 张渊（小手冰凉）

--- a/css/fitup_dz.css
+++ b/css/fitup_dz.css
@@ -56,7 +56,7 @@
 	color: #fefefe;
 }
 .bot_nav p:first-child{
-	background: #2b70d8;
+	background: #333333;
 }
 .bot_nav p:last-child{
 	background: #ffba26;
