--- a/css/mycollection.css
+++ b/css/mycollection.css
@@ -11,6 +11,7 @@ body{
 	background: #f9f9f9;
 	padding-top: 20px;
 	box-shadow: initial;
+	border-bottom: 1px solid #e5e5e5;
 }
 .wd-header a{
 	color: #666666;
