--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,18 @@
 .indexss{position: absolute;bottom:0px;z-index: 99999;height:50px;background-color: rgba(0,0,0,.3);width: 100%;}
 .idnexdisplay{display: none;}
 .idnexdisplayblo{display: block;}
+.sy_kfion p{
+	position: fixed;
+	z-index: 99999;
+	right: 0;
+	top: 68%;
+	width: 1.12rem;
+	height: 1.12rem;
+	background: url(../img/sy_kfion.png)no-repeat center;
+	background-size: 100% auto;
+}
+.sy_kfion p a{
+	display: inline-block;
+	width: 100%;
+	height: 100%;
+}
