--- a/css/sy.css
+++ b/css/sy.css
@@ -326,7 +326,7 @@
 	z-index: 99999;
 	width: 2.4rem;
 	height: 0.8rem;
-	top: 80%;
+	top: 12.866666rem;
 	margin-top: -0.4rem;
 	right: 0;
 	background: #fc7b1f;
@@ -349,7 +349,7 @@
 	position: fixed;
 	z-index: 99999;
 	right: 0;
-	top: 68%;
+	top: 10.933333rem;
 	width: 1.12rem;
 	height: 1.12rem;
 	background: url(../img/sy_kfion.png)no-repeat center;
