--- a/css/jxfyList.css
+++ b/css/jxfyList.css
@@ -41,7 +41,7 @@
 	position: fixed;
 	z-index: 99999;
 	right: 0;
-	top: 50%;
+	top: 8.653333rem!important;
 	width: 1.12rem;
 	height: 1.12rem;
 	background: url(../img/sy_kfion.png)no-repeat center;
