--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@
 	position: fixed;
 	z-index: 99999;
 	right: 0;
-	top: 68%;
+	top: 10.933333rem;
 	width: 1.12rem;
 	height: 1.12rem;
 	background: url(../img/sy_kfion.png)no-repeat center;
